# omnimemory

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  build.sh  docker-compose.local.yml  main.py  pyproject.toml  run_api_server.py
.github/workflows/: tests.yml
docs/: API_SPECIFICATION.md  ARCHITECTURE.md  C4_ARCHITECTURE.md
examples/: README.md  complete_api_example.py  complete_sdk_example.py
monitoring/: grafana-datasources.yml  prometheus.yml
monitoring/grafana-provisioning/dashboards/: dashboards.yml  omnimemory-dashboard.json
src/omnimemory/: __init__.py  sdk.py  sdk_agent_memory.py
src/omnimemory/api/: API_SPECIFICATION.md  __init__.py  schemas.py  server.py
src/omnimemory/cli/: __init__.py  banner.py  daemon_client.py  daemon_constants.py  daemon_service.py  main.py
src/omnimemory/core/: __init__.py  agents.py  config.py  llm.py  logger_utils.py  metrics.py  results.py  schemas.py  system_prompts.py  types.py  utils.py
src/omnimemory/memory_management/: __init__.py  chromadb_vector_db.py  connection_pool.py  memory_manager.py  mongodb_vector_db.py  postgresql_vector_db.py  qdrant_vector_db.py  vector_db_base.py  vector_db_factory.py
tests/: __init__.py  conftest.py
tests/unit/: test_api_server.py  test_cli_main.py  test_sdk.py  test_sdk_agent_memory.py
tests/unit/core/: __init__.py  conftest.py  test_agents.py  test_config.py  test_llm.py  test_logger_utils.py  test_metrics.py  test_results.py  test_schemas.py  test_system_prompts.py  test_types.py  test_utils.py
tests/unit/memory_management/: __init__.py  test_chromadb_vector_db.py  test_connection_pool.py  test_memory_manager_batch.py  test_memory_manager_conflict.py  test_memory_manager_crud.py  test_memory_manager_evolution.py  test_memory_manager_llm.py  test_memory_manager_pipeline.py  test_memory_manager_pooling.py  test_memory_manager_query.py  test_memory_manager_status.py  test_memory_manager_storage.py  test_memory_manager_utils.py  test_mongodb_vector_db.py  test_postgresql_vector_db.py  test_qdrant_vector_db.py  test_vector_db_base.py
